using javaScript change the color of the circles

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div id="bottonRow"><div class="col-sm-12"><button type="button" class="btn btn-lg btn-success" value="mainPageBtn"><h3>New Game</h3></button></div></div>
     </div>
     <div id ="gameBroadPage">
+        <!-- game broad -->
         <div id = "gameBroad">
                 <div class="container">
                     <div class="row">
